...
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="#9CA3AF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Search events by keywords"
                android:imeOptions="actionSearch"
                android:inputType="text"
...
