...
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!-- Create Event Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ButtonCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="18dp"
                android:text="Create New Event"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
...
