...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/remove_user_button"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image"
            app:layout_constraintTop_toTopOf="@+id/user_profile_image" />

        <TextView
            android:id="@+id/user_join_date_text"
            android:layout_width="0dp"
...
